--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v3
@@ -22,6 +22,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-apt-
 
+    - name: Install system dependencies
+      run: |
+        set -e
+        sudo apt-get update
+        sudo apt-get install -y build-essential m4 libpng-dev
+
     - name: Install OCaml 3.09.3 (from source)
       run: |
         set -e
@@ -29,22 +35,9 @@ jobs:
         tar -xzf ocaml-3.09.3.tar.gz
         cd ocaml-3.09.3
         ./configure
-        # Patch signals.c for compatibility with modern GCC
-        sed -i '1i#define _GNU_SOURCE\n#include <signal.h>' asmrun/signals.c
-        # Apply sigprocmask patch from https://github.com/ocaml/ocaml/pull/1752
-        sed -i 's/sigset_t sigs;/sigset_t nsigs, sigs;/' asmrun/signals.c
-        sed -i 's/sigemptyset(&sigs);/sigemptyset(\&nsigs);/' asmrun/signals.c
-        sed -i 's/sigaddset(&sigs, signal_number);/sigaddset(\&nsigs, signal_number);/' asmrun/signals.c
-        sed -i 's/sigprocmask(SIG_BLOCK, &sigs, &sigs);/sigprocmask(SIG_BLOCK, \&nsigs, \&sigs);/' asmrun/signals.c
         make world.opt
         sudo make install
         cd ..
-
-    - name: Install system dependencies
-      run: |
-        set -e
-        sudo apt-get update
-        sudo apt-get install -y build-essential m4 libpng-dev
 
     # OMake 0.9.6.8 is required, install from source
     - name: Install OMake (from source)
