--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         git clone --branch 3.09.3 --depth 1 https://github.com/ocaml/ocaml
         cd ocaml
         ./configure
-        make world.opt
+        make world.opt CFLAGS="-D_POSIX_C_SOURCE=199309L -std=gnu89"
         sudo make install
         cd ..
 
