--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         opam init --no-setup
         opam repository add archive git+https://github.com/ocaml/opam-repository-archive
-        opam switch create 3.09.3 ocaml-base-compiler.3.09.3
+        opam switch create 3.09.3 ocaml-base-compiler.3.09.3 ocaml-system.3.09.3
         eval $(opam env)
         ocaml -version
     - name: Verify OCaml version
