--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,26 +25,20 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential m4 libpng-dev libsigsegv-dev opam
+        sudo apt-get install -y build-essential m4 libpng-dev libsigsegv-dev
 
-    - name: Install OCaml 3.09.3 (via OPAM)
+    - name: Install OCaml 3.09.3 (from source)
       run: |
-        opam init --no-setup
-        opam repository add archive git+https://github.com/ocaml/opam-repository-archive
-        opam switch create 3.09.3 ocaml-base-compiler.3.09.3 ocaml-system.3.09.3
-        eval $(opam env)
-        ocaml -version
-    - name: Verify OCaml version
-      run: |
-        eval $(opam env)
-        ocaml -version
+        git clone --branch 3.09.3 --depth 1 https://github.com/ocaml/ocaml
+        cd ocaml
+        ./configure CFLAGS="-D_GNU_SOURCE -D_POSIX_C_SOURCE=200112L -DHAS_STACK_OVERFLOW_DETECTION -DSIGSTKSZ=8192"
+        make world.opt
+        sudo make install
+        cd ..
 
     # OMake 0.9.6.8 is required, install from source
     - name: Install OMake (from source)
       run: |
-        eval $(opam env)
-        ocaml -version
-
         wget http://web.archive.org/web/20070623190729/mojave.metaprl.org/download/omake/omake-0.9.6.8-1.tar.gz -O omake.tar.gz
         tar -xzf omake.tar.gz
         cd omake-0.9.6.8/
@@ -53,9 +47,6 @@ jobs:
 
     - name: Install OCaml Libraries
       run: |
-        eval $(opam env)
-        ocaml -version
-
         echo "Installing Findlib..."
         wget http://download.camlcity.org/download/findlib-1.2.1.tar.gz -O findlib.tar.gz
         tar -xzf findlib.tar.gz
@@ -96,17 +87,11 @@ jobs:
 
     - name: Configure RLDev
       run: |
-        eval $(opam env)
-        ocaml -version
-
         cd src
         ./configure --encoding=UTF8
 
     - name: Build RLDev
       run: |
-        eval $(opam env)
-        ocaml -version
-
         cd src
         omake
 
