--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         git clone --branch 3.09.3 --depth 1 https://github.com/ocaml/ocaml
         cd ocaml
-        CFLAGS="-D_GNU_SOURCE -D_POSIX_C_SOURCE=200112L -DHAS_STACK_OVERFLOW_DETECTION -DSIGSTKSZ=8192" ./configure
+        export CFLAGS="-D_GNU_SOURCE -D_POSIX_C_SOURCE=200112L -DHAS_STACK_OVERFLOW_DETECTION -DSIGSTKSZ=8192"; ./configure
         make world.opt
         sudo make install
         cd ..
