--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,25 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential m4 libpng-dev libsigsegv-dev
+        # 添加旧版工具链仓库并安装GCC 4.8
+        sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        sudo apt-get update
+        sudo apt-get install -y gcc-4.8 g++-4.8
+        # 设置GCC 4.8为默认编译器
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 10 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8
+        # 安装预处理器工具解决SIGSTKSZ问题
+        sudo apt-get install -y libbsd-dev
 
+    - name: Check GCC version
+      run: |
+        gcc --version
     - name: Install OCaml 3.09.3 (from source)
       run: |
         git clone --branch 3.09.3 --depth 1 https://github.com/ocaml/ocaml
         cd ocaml
-        ./configure CPPFLAGS="-D_XOPEN_SOURCE=600" CFLAGS="-D_GNU_SOURCE -D_POSIX_C_SOURCE=200112L -DHAS_STACK_OVERFLOW_DETECTION -DSIGSTKSZ=8192" && make world.opt
+        # 使用GCC 4.8并添加C99标准和BSD宏定义解决restrict和SIGSTKSZ问题
+        ./configure
+        make world.opt CC=gcc-4.8 CFLAGS="-std=gnu99 -D_BSD_SOURCE -I/usr/include/bsd"
         sudo make install
         cd ..
 
