--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
         cd ocaml
         # 使用GCC 4.8并添加C99标准和BSD宏定义解决restrict和SIGSTKSZ问题
         ./configure
-        make world.opt
+        make world.opt CC=gcc-4.8 CFLAGS="-std=gnu99"
         sudo make install
         cd ..
 
